syntax = "proto3";
package configCenter;

option go_package = "./rpc_impl";
option optimize_for = LITE_RUNTIME;

service IConfigCenter {
  // for other services
  rpc GetConfig(Config.GetConfigReq) returns (Config.GetConfigRes);
}

message Config {
  message GetConfigReq {
    string service_id = 1;
  }

  message GetConfigRes {
    string config = 1; // json str
  }
}
